package de.uni_passau.aj.exercise3.bankanalyzer.enums;

/**
 * The available account types
 */
public enum AccountType {
    SALARY, PRIVATE_SAVINGS, FOREIGN_CURRENCIES, GIFT
}
