package de.uni_passau.aj.exercise3.bankanalyzer.enums;

/**
 * The supported currencies.
 */
public enum Currency {
    EUR, CHF, USD
}
