package de.uni_passau.aj.exercise3.bankanalyzer.enums;

/**
 * The available portfolio types.
 */
public enum PortfolioType {
    STANDARD, RETIREMENT_PROVISION
}
